--- a/client/src/app/components/books/bookmark/bookmark.component.html
+++ b/client/src/app/components/books/bookmark/bookmark.component.html
@@ -1,25 +1,31 @@
 <div class="m-3"><h2>Bookmarked Books</h2></div>
 <div class="card mt-2 m-4">
- 
   <div class="card">
     <table mat-table [dataSource]="bookmarkedBooks">
-  
       <ng-container matColumnDef="title">
-        <th mat-header-cell  [ngStyle]="{ 'background-color': tableHeaderBgColor }" *matHeaderCellDef> Title </th>
+        <th
+          mat-header-cell
+          [ngStyle]="{ 'background-color': tableHeaderBgColor }"
+          *matHeaderCellDef
+        >
+          Title
+        </th>
         <td mat-cell *matCellDef="let book">{{ book.title }}</td>
       </ng-container>
-      
+
       <ng-container matColumnDef="author">
-        <th mat-header-cell [ngStyle]="{ 'background-color': tableHeaderBgColor }" *matHeaderCellDef> Author </th>
+        <th
+          mat-header-cell
+          [ngStyle]="{ 'background-color': tableHeaderBgColor }"
+          *matHeaderCellDef
+        >
+          Author
+        </th>
         <td mat-cell *matCellDef="let book">{{ book.author }}</td>
       </ng-container>
-    
-      <!-- More Columns -->
-    
+
       <tr mat-header-row *matHeaderRowDef="['title', 'author']"></tr>
-      <tr mat-row *matRowDef="let row; columns: ['title', 'author'];"></tr>
+      <tr mat-row *matRowDef="let row; columns: ['title', 'author']"></tr>
     </table>
   </div>
- 
-  
 </div>
