- changes in design

--- a/client/src/app/components/books/edit-book/edit-book.component.html
+++ b/client/src/app/components/books/edit-book/edit-book.component.html
@@ -24,8 +24,8 @@
 </mat-dialog-content>
 
 <mat-dialog-actions>
-  <button mat-button (click)="onCancel()">Cancel</button>
-  <button mat-button (click)="onSave(data)">Save</button>
+  <button mat-button (click)="onCancel()"  class="cancel-button">Cancel</button>
+  <button mat-button (click)="onSave(data)" class="save-button">Save</button>
 </mat-dialog-actions>
 <div class="card flex justify-center">
   <p-toast></p-toast>
