--- a/client/src/app/components/books/add-book/add-book.component.css
+++ b/client/src/app/components/books/add-book/add-book.component.css
@@ -2,61 +2,54 @@ form {
   display: flex;
   flex-direction: column;
   gap: 25px;
-  max-width: 600px;
-  margin: 25px auto;
-  padding: 15px;
-  background-color: #f9f9f9;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 25px;
+  width: 500px;
 }
 
 mat-form-field {
   width: 100%;
 }
 
-button {
-  align-self: flex-end;
+button-container {
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+}
 
+button {
   width: auto;
 }
 
-.mat-form-row {
-  display: flex;
-  gap: 25px;
-  justify-content: space-between;
+.cancel-button:hover {
+  color: white;
+  background-color: rgb(235, 23, 23);
 }
 
-.mat-form-row mat-form-field {
-  flex: 1;
+.save-button:hover {
+  background-color: blue;
+  color: white;
 }
 
 mat-checkbox {
   margin-top: 10px;
-  font-size: 16px;
-  color: #555;
+}
+
+h3 {
+  text-align: center;
+  margin: 10px auto;
+  font-size: 24px;
+  color: #333;
 }
 
 @media (max-width: 600px) {
   form {
-    padding: 15px;
+    padding: 10px;
     gap: 10px;
   }
 
-  .mat-form-row {
-    flex-direction: column;
-  }
-
-  .mat-form-row mat-form-field {
+  mat-form-field {
     width: 100%;
   }
-}
-
-h3 {
-  margin-top: 10px;
-  text-align: center;
-  margin-bottom: 10px;
-  color: #333;
-  font-size: 24px;
 }
 
 .p-dialog .p-dialog-content {
