--- a/client/src/app/components/books/add-book/add-book.component.html
+++ b/client/src/app/components/books/add-book/add-book.component.html
@@ -1,104 +1,89 @@
-<p-toast></p-toast>
+<h2 mat-dialog-title>Add Book:</h2>
 
+<form [formGroup]="addBookForm" (ngSubmit)="onSubmit()">
+  <div class="p-fluid">
+    <div class="p-field">
+      <mat-form-field appearance="fill">
+        <mat-label>Title</mat-label>
+        <input id="title" matInput formControlName="title" required />
+        <mat-error *ngIf="addBookForm.get('title')?.hasError('required')">
+          Title is required
+        </mat-error>
+      </mat-form-field>
+    </div>
 
-<p-dialog
-  header="Add Book"
-  [(visible)]="displayDialog"
-  [modal]="true"
-  [closable]="true"
-  
->
-  <form [formGroup]="addBookForm" (ngSubmit)="onSubmit()">
-    <div class="p-fluid">
-      <div class="p-field">
-        <label for="title">Title</label>
-        <input id="title" pInputText formControlName="title" required />
-        <p-messages
-          *ngIf="addBookForm.get('title')?.hasError('required')"
-          severity="error"
-          text="Title is required"
-        ></p-messages>
-      </div>
+    <div class="p-field">
+      <mat-form-field appearance="fill">
+        <mat-label>Author</mat-label>
+        <input id="author" matInput formControlName="author" required />
+        <mat-error *ngIf="addBookForm.get('author')?.hasError('required')">
+          Author is required
+        </mat-error>
+      </mat-form-field>
+    </div>
 
-      <div class="p-field">
-        <label for="author">Author</label>
-        <input id="author" pInputText formControlName="author" required />
-        <p-messages
-          *ngIf="addBookForm.get('author')?.hasError('required')"
-          severity="error"
-          text="Author is required"
-        ></p-messages>
-      </div>
-
-      <div class="p-field">
-        <label for="publicationYear">Publication Year</label>
+    <div class="p-field">
+      <mat-form-field appearance="fill">
+        <mat-label>Publication Year</mat-label>
         <input
           id="publicationYear"
-          pInputText
+          matInput
           formControlName="publicationYear"
           required
         />
-        <p-messages
+        <mat-error
           *ngIf="addBookForm.get('publicationYear')?.hasError('required')"
-          severity="error"
-          text="Year is required"
-        ></p-messages>
-        <p-messages
-          *ngIf="addBookForm.get('publicationYear')?.hasError('min')"
-          severity="error"
-          text="Year must be at least 1900"
-        ></p-messages>
-        <p-messages
-          *ngIf="addBookForm.get('publicationYear')?.hasError('max')"
-          severity="error"
-          text="Year cannot be in the future"
-        ></p-messages>
-      </div>
-
-      <div class="p-field">
-        <label for="price">Price</label>
-        <input id="price" pInputText formControlName="price" required />
-        <p-messages
-          *ngIf="addBookForm.get('price')?.hasError('required')"
-          severity="error"
-          text="Price is required"
-        ></p-messages>
-        <p-messages
-          *ngIf="addBookForm.get('price')?.hasError('pattern')"
-          severity="error"
-          text="Price must be a valid number"
-        ></p-messages>
-      </div>
-
-      <div class="p-field">
-        <label for="genre">Genre</label>
-        <input id="genre" pInputText formControlName="genre" required />
-        <p-messages
-          *ngIf="addBookForm.get('genre')?.hasError('required')"
-          severity="error"
-          text="Genre is required"
-        ></p-messages>
-      </div>
-
-      <!-- <div class="p-field-checkbox">
-        <p-checkbox
-          formControlName="availability"
-          label="Available"
-
-        ></p-checkbox>
-      </div> -->
+        >
+          Year is required
+        </mat-error>
+        <mat-error *ngIf="addBookForm.get('publicationYear')?.hasError('min')">
+          Year must be at least 1900
+        </mat-error>
+        <mat-error *ngIf="addBookForm.get('publicationYear')?.hasError('max')">
+          Year cannot be in the future
+        </mat-error>
+      </mat-form-field>
     </div>
-  </form>
-  <p-footer>
+
+    <div class="p-field">
+      <mat-form-field appearance="fill">
+        <mat-label>Price</mat-label>
+        <input id="price" matInput formControlName="price" required />
+        <mat-error *ngIf="addBookForm.get('price')?.hasError('required')">
+          Price is required
+        </mat-error>
+        <mat-error *ngIf="addBookForm.get('price')?.hasError('pattern')">
+          Price must be a valid number
+        </mat-error>
+      </mat-form-field>
+    </div>
+
+    <div class="p-field">
+      <mat-form-field appearance="fill">
+        <mat-label>Genre</mat-label>
+        <input id="genre" matInput formControlName="genre" required />
+        <mat-error *ngIf="addBookForm.get('genre')?.hasError('required')">
+          Genre is required
+        </mat-error>
+      </mat-form-field>
+    </div>
+
+    <div class="p-field-checkbox">
+      <mat-checkbox formControlName="availability">Available</mat-checkbox>
+    </div>
+  </div>
+
+  <div align="end">
+    <button mat-button mat-dialog-close>Cancel</button>
     <button
-      pButton
-      type="submit"
-      label="Add Book"
+      mat-button
+      color="primary"
       [disabled]="addBookForm.invalid"
-      (click)="onSubmit()"
-    ></button>
-  </p-footer>
-</p-dialog>
+      type="submit"
+    >
+      Save Changes
+    </button>
+  </div>
+</form>
 
-
-<!-- <button pButton type="button" label="Add Book" (click)="showDialog()"></button> -->
+<p-toast></p-toast>
