--- a/client/src/app/components/books/book-list/book-list.component.css
+++ b/client/src/app/components/books/book-list/book-list.component.css
@@ -11,6 +11,17 @@
   
 }
 
+.delete-btn:hover {
+  color: white;
+  background-color:  rgb(235, 23, 23);
+}
+
+
+.edit-btn:hover {
+  background-color:  blue;
+  color: white;
+}
+
 .booklist-container {
   display: flex;
   justify-content: flex-end;
@@ -84,31 +95,23 @@
 .filter-actions {
   display: flex;
   justify-content: space-between;
-  margin-top: 10px;
+  margin: 9px 8px 6px 130px;
 }
 
-.filter-actions button {
-  flex: 1;
-  padding: 8px 16px;
-  border-radius: 5px;
-  font-size: 14px;
-  cursor: pointer;
-  margin: 0 8px;
-}
 
-.clear-filter-btn {
-  background-color: #d7e3ff;
+
+/* .clear-filter:hover {
   color: white;
-}
+  background-color:  rgb(235, 23, 23);
+} */
 
-.clear-filter-btn:hover {
-  background-color: #e53935;
-}
 
-.apply-filter-btn {
+
+/* .apply-filter-btn {
   background-color: #4caf50;
   color: white;
-}
+} */
+
 
 .filter-actions button:hover {
   opacity: 0.8;
