--- a/client/src/app/components/books/book-list/book-list.component.html
+++ b/client/src/app/components/books/book-list/book-list.component.html
@@ -69,11 +69,11 @@
           </div>
 
           <div class="filter-actions">
-            <button (click)="clearFilters()" class="clear-filter-btn">
-              Clear Filter
+            <button mat-button (click)="clearFilters()" class="clear-filter">
+              Clear 
             </button>
-            <button (click)="applyFilter()" class="apply-filter-btn">
-              Apply Filter
+            <button mat-button (click)="applyFilter()" class="apply-btn">
+              Apply 
             </button>
           </div>
         </div>
@@ -191,8 +191,8 @@
           Actions
         </th>
         <td mat-cell *matCellDef="let book">
-          <button mat-button (click)="openEditDialog(book)">Edit</button>
-          <button mat-button (click)="deleteBook(book._id)">Delete</button>
+          <button mat-button class="edit-btn" (click)="openEditDialog(book)">Edit</button>
+          <button mat-button class="delete-btn" (click)="deleteBook(book._id)">Delete</button>
         </td>
       </ng-container>
 
