--- a/client/src/app/components/books/edit-book/edit-book.component.css
+++ b/client/src/app/components/books/edit-book/edit-book.component.css
@@ -1,59 +1,66 @@
 form {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    padding: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 15px;
+}
+
+mat-form-field {
+  width: 100%;
+}
+
+.mat-form-row {
+  display: flex;
+  gap: 20px;
+  justify-content: space-between;
+}
+
+.mat-form-row mat-form-field {
+  flex: 1;
+}
+
+button {
+  width: auto;
+}
+
+button-container {
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+.cancel-button:hover {
+  color: white;
+  background-color:  rgb(235, 23, 23);
+}
+
+.save-button:hover {
+  background-color:  blue;
+  color: white;
+}
+mat-checkbox {
+  margin-top: 10px;
+}
+
+h3 {
+  text-align: center;
+  margin: 10px auto;
+  font-size: 24px;
+  color: #333;
+}
+
+@media (max-width: 600px) {
+  form {
+    padding: 10px;
+    gap: 10px;
   }
-  
-  mat-form-field {
+
+  .mat-form-row {
+    flex-direction: column;
+  }
+
+  .mat-form-row mat-form-field {
     width: 100%;
   }
-  
-  .mat-form-row {
-    display: flex;
-    gap: 20px;
-    justify-content: space-between;
-  }
-  
-  .mat-form-row mat-form-field {
-    flex: 1;
-  }
-  
-  button {
-    width: auto;
-  }
-  
-  button-container {
-    display: flex;
-    justify-content: flex-end;
-    gap: 10px;
-    margin-top: 10px;
-  }
-  
-  mat-checkbox {
-    margin-top: 10px;
-  }
-  
-  h3 {
-    text-align: center;
-    margin: 10px auto;
-    font-size: 24px;
-    color: #333;
-  }
-  
-  @media (max-width: 600px) {
-    form {
-      padding: 10px;
-      gap: 10px;
-    }
-  
-    .mat-form-row {
-      flex-direction: column;
-    }
-  
-    .mat-form-row mat-form-field {
-      width: 100%;
-    }
-  }
-  
-  
+}
