--- a/client/src/app/components/partials/layout/layout.component.css
+++ b/client/src/app/components/partials/layout/layout.component.css
@@ -60,7 +60,7 @@
 }
 
 .side-nav-button.active {
-  background-color: #2f3b47;
+  background-color: #4a5b69;
   font-weight: 600;
   border: 2px solid #4a5b69;
   color: white;
