--- a/client/src/app/components/user/user-list/user-list.component.css
+++ b/client/src/app/components/user/user-list/user-list.component.css
@@ -9,6 +9,17 @@
   border-collapse: collapse;
 }
 
+.delete-btn:hover {
+  color: white;
+  background-color:  rgb(235, 23, 23);
+}
+
+
+.edit-btn:hover {
+  background-color:  blue;
+  color: white;
+}
+
 .mat-mdc-row .mat-mdc-cell {
   border-bottom: 1px solid transparent;
   border-top: 1px solid transparent;
