-working on add book component

--- a/client/src/app/auth/register/register.component.html
+++ b/client/src/app/auth/register/register.component.html
@@ -154,6 +154,11 @@
             </p-floatLabel>
           </div>
 
+          <div class="flex items-center gap-2">
+            <p-checkbox id="accept"  name="accept" value="Accept" />
+            <label for="accept">I agree to the terms and conditions.</label>
+        </div>
+
           <div class="button-container submit-button-container">
             <div>
               <button
