--- a/client/src/app/components/books/book-list/book-list.component.html
+++ b/client/src/app/components/books/book-list/book-list.component.html
@@ -70,10 +70,10 @@
 
           <div class="filter-actions">
             <button mat-button (click)="clearFilters()" class="clear-filter">
-              Clear 
+              Clear
             </button>
             <button mat-button (click)="applyFilter()" class="apply-btn">
-              Apply 
+              Apply
             </button>
           </div>
         </div>
@@ -132,7 +132,7 @@
         <td mat-cell *matCellDef="let element">{{ element.author }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="publicationYear">
+      <ng-container matColumnDef="publicationYearMonth">
         <th
           mat-header-cell
           [ngStyle]="{ 'background-color': tableHeaderBgColor }"
@@ -141,7 +141,7 @@
           Year
         </th>
         <td mat-cell *matCellDef="let element">
-          {{ element.publicationYear }}
+          {{ element.publicationYearMonth }}
         </td>
       </ng-container>
 
@@ -178,7 +178,7 @@
           Availability
         </th>
         <td mat-cell *matCellDef="let element">
-          {{ element.availability ? "Available" : "Not Available" }}
+          {{ element.inventoryStatus }}
         </td>
       </ng-container>
       <ng-container matColumnDef="actions" *ngIf="!isUser">
@@ -191,8 +191,12 @@
           Actions
         </th>
         <td mat-cell *matCellDef="let book">
-          <button mat-button class="edit-btn" (click)="openEditDialog(book)">Edit</button>
-          <button mat-button class="delete-btn" (click)="deleteBook(book._id)">Delete</button>
+          <button mat-button class="edit-btn" (click)="openEditDialog(book)">
+            Edit
+          </button>
+          <button mat-button class="delete-btn" (click)="deleteBook(book._id)">
+            Delete
+          </button>
         </td>
       </ng-container>
 
@@ -492,12 +496,25 @@
       <mat-paginator
         [length]="dataSource.data.length"
         [pageSize]="5"
-        [pageSizeOptions]="[5, 10, 20]"
+        [pageSizeOptions]="[5, 10]"
         showFirstLastButtons
       ></mat-paginator>
     </div>
   </mat-card>
 
+  <p-dialog
+    [(visible)]="displayDialog"
+    [style]="{ width: '600px', height: '700px' }"
+    header="Add Book"
+    [modal]="true"
+    [closable]="true"
+    styleClass="p-fluid"
+    (onHide)="onDialogHide()"
+    [resizable]="false"
+  >
+   
+    <add-book (saveBook)="onBookSaved($event)"></add-book>
+  </p-dialog>
   <div class="card flex justify-center">
     <p-toast></p-toast>
 
