--- a/client/src/app/auth/verification/verification.component.html
+++ b/client/src/app/auth/verification/verification.component.html
@@ -11,7 +11,7 @@
         
         <p>Thank you for verifying your email address. You are now ready to start exploring our platform!</p>
         
-        <a class="btn btn-primary" href="/dashboard">Go to Dashboard</a>
+        <!-- <a class="btn btn-primary" href="/dashboard">Go to Dashboard</a> -->
   
        
         <p *ngIf="countdown > 0">You will be redirected to the login page in    <i class="fas fa-clock"></i> {{ countdown }} seconds...</p>
