--- a/client/src/app/auth/login/login.component.html
+++ b/client/src/app/auth/login/login.component.html
@@ -15,8 +15,8 @@
 
         <!-- Only show the login form when isForgotPassword is false -->
         <form *ngIf="!isForgotPassword" [formGroup]="loginForm" (ngSubmit)="onLogin()">
-          <div class="form-field">
-            <p-floatLabel class="w-100">
+          <div class="form-field ">
+            <p-floatLabel variant="in" class="w-100">
               <input
                 pInputText
                 id="email"
@@ -26,7 +26,7 @@
                 class="form-control"
                 [style]="{ width: '100%' }"
               />
-              <label for="email">Email</label>
+              <label class="label-float" for="email">Email</label>
               <p
                 *ngIf="loginForm.get('email')?.hasError('required') && loginForm.get('email')?.touched"
                 class="error-message"
@@ -55,7 +55,7 @@
                 [style]="{ width: '100%' }"
                 [inputStyle]="{ width: '100%' }"
               ></p-password>
-              <label for="password">Password</label>
+              <label class="label-float" for="password">Password</label>
               <p
                 *ngIf="loginForm.get('password')?.hasError('required') && loginForm.get('password')?.touched"
                 class="error-message"
@@ -87,7 +87,7 @@
         </form>
 
         <!-- Show forgot password form when isForgotPassword is true -->
-        <app-forgot-password *ngIf="isForgotPassword"></app-forgot-password>
+        <app-forgot-password *ngIf="isForgotPassword"  (backToLoginEvent)="handleBackToLogin()"></app-forgot-password>
 
         <!-- Sign-up link (only visible when on the login form) -->
         <div *ngIf="!isForgotPassword" class="form-footer mt-3">
